Adicionado tipo aos cards, permitindo diferentes tipos como livros, cursos, vídeos e cards genéricos